# demoqa-e2e-tests

./: .gitignore  README.md  pyproject.toml  pytest.ini  readme1.txt  requirements.txt
demoqa_e2e_tests/: utils.py
demoqa_e2e_tests/models/: __init__.py  app.py
demoqa_e2e_tests/models/controls/: __init__.py  checkbox.py  datepicker.py  radio_button.py  table.py
demoqa_e2e_tests/models/pages/: __init__.py  registration_form.py  searching_issue.py  webtables_fill.py
resouces/: book.csv  Товары подборкиVS.xlsx
resources/: items.xls  items2.xlsx
tests/: __init__.py  cicle.py  conftest.py  test_allure_attachs.py  test_fail.py  test_issue_exist.py  test_issue_exist_all_markup.py  test_practice_form.py  test_registration_form.py  test_registration_form_with_steps.py  test_remastered_positive.py  test_webtable_fill.py  test_webtables_fill.py  test_work_with_files.py  work_with_csv.py  work_with_files.py  work_with_path.py  work_with_pdf.py  work_with_text_files.py  work_with_xls.py  work_with_xlsx.py  work_with_zip.py
tests/api/: test_demo_web_shop.py  test_request_in.py  test_requests.py  test_schema_validator.py  test_schema_valuptus.py
tests/api/schemas/: schemas.py
tests/form/: __init__.py  test_registration_form.py  test_registration_form_with_steps.py
tests/gihub/: __init__.py  test_issue_exist_decorators.py  test_issue_exist_steps.py
tests/github_sign_in/: test_different_fixtures.py  test_override_attribute.py  test_skipped_mobile.py
tests/simple/: test_parametrized.py  test_pass.py  test_skipped.py
tests/tables/: test_webtable_fill.py
tests/test_data/: test_skipped.py  users.py
utils/: attach.py  attach_evidence.py  base_session.py  utils.py
